[workspace]
members = ["shadowquic", "shadowquic-macros","perf"]
default-members = ["shadowquic"]
resolver = "3"


[workspace.package]
version = "0.3.4"
edition = "2024"
authors = ["spongebob888"]
categories = ["proxy", "quic"]
keywords = ["quic", "sni"]
homepage = "https://github.com/spongebob888/shadowquic"
repository = "https://github.com/spongebob888/shadowquic.git"
description = "A 0-RTT QUIC Proxy with SNI camouflage"
license = "MIT"
readme = "README.md"


[workspace.dependencies]

[profile.release]
opt-level = 3        
lto = "fat"          
codegen-units = 1    
panic = "abort"      
strip = "symbols"    
debug = false        
incremental = false  